# minni

./: .gitignore  Makefile.am  README  THANKS  acinclude.m4  bootstrap.sh  build.sh  configure.ac  default.cfg  maintainer-clean  sample.cfg
code/: daemon.thrift
code/gen-cpp/: Makefile  WorkDaemon.cpp  WorkDaemon.h  WorkDaemon_client.cpp  WorkDaemon_common.h  WorkDaemon_file.cpp  WorkDaemon_file.h  WorkDaemon_other.cpp  WorkDaemon_other.h  WorkDaemon_server.cpp  WorkDaemon_server.skeleton.cpp  WorkDaemon_tasks.cpp  WorkDaemon_tasks.h  daemon_types.cpp  daemon_types.h  tbbvars.sh  tbbvars_linux.sh  tbbvars_mac.sh
final/: Architecture.graffle  Makefile  PAO_Hash.graffle  System.graffle  data_flow.graffle  final.tex  hadoop_trace.eps  master.graffle  minni_trace.eps  references.bib
proposal/: Architecture.graffle  Makefile  proposal.tex  references.bib
scripts/: gen_random.cpp
scripts/config/: modconfig.cpp
scripts/experiments/: vary_cbt_buffer_size.py  vary_cbt_fanout.py  vary_input.py  vary_token_size.py
scripts/monitoring/: avg_map_mem.py  avg_map_mem_2s.py  collect_minni_trace.sh  (+3 more)
src/: Makefile  Makefile.am  README
src/dfs/: DFS.h  HDFS.cpp  HDFS.h  KDFS.cpp  KDFS.h  Makefile.am
src/dfs/tools/: Makefile.am  Reader.cpp  Reader.h  Writer.cpp  Writer.h
src/lib/: Adder.h  AggSortMapper.cpp  AggSortMapper.h  Aggregator.cpp  Aggregator.h  AppGoogDenseHash.cpp  AppGoogDenseHash.h  AppendMap.cpp  AppendMap.h  Bucket.cpp  Bucket.h  BucketAggregator.cpp  BucketAggregator.h  DFSReader.cpp  DFSReader.h  Defs.h  Deserializer.cpp  Deserializer.h  EHBucket.cpp  EHBucket.h  EHFawn.cpp  EHFawn.h  EHFullEvict.cpp  EHFullEvict.h  EHNotFreqUsedEvict.cpp  EHNotFreqUsedEvict.h  ExtendableHashtable.cpp  ExtendableHashtable.h  ExtendableMap.cpp  ExtendableMap.h  ExternalHasher.cpp  ExternalHasher.h  ExthashAggregator.cpp  ExthashAggregator.h  FawnHasher.cpp  FawnMapper.cpp  FawnMapper.h  FileReader.cpp  FileReader.h  Hash.h  (+45 more)
src/lib/aggregators/: Aggregator.cpp  Aggregator.h  BucketAggregator.cpp  BucketAggregator.h  ExthashAggregator.cpp  ExthashAggregator.h  HashAggregator.cpp  HashAggregator.h  HashsortAggregator.cpp  HashsortAggregator.h  IterAggregator.cpp  IterAggregator.h  LocalIterativeAggregator.cpp  LocalIterativeAggregator.h  TesterAggregator.cpp  TesterAggregator.h
src/lib/apps/: Makefile.am  Neighbor.h  digplain.cpp  digplain.h  ic_boost.cpp  ic_boost.h  ic_proto.cpp  ic_proto.h  img.cpp  img.h  imgclass.h  imgclass.proto  imgcluster.proto  imgpao.proto  imgplain.cpp  imgplain.h  knn.cpp  knn.h  pagerank.cpp  pagerank.h  pagerank.proto  pr_boost.cpp  pr_boost.h  pr_proto.cpp  pr_proto.h  semantic.cpp  semantic.h  semantic_plain.cpp  semantic_plain.h  semanticpao.proto  wc_boost.cpp  wc_boost.h  wc_proto.cpp  wc_proto.h  wcdig_boost.cpp  wcdig_boost.h  wcdig_proto.cpp  wcdig_proto.h  wcdigram.cpp  wcdigram.h  (+15 more)
src/lib/core/: BoostPartialAgg.h  Defs.h  HandSerializedPartialAgg.h  MapInput.h  Mapper.cpp  Mapper.h  Minnie.cpp  Minnie.h  PartialAgg.h  ProtobufPartialAgg.h  Reducer.cpp  Reducer.h  Util.h
src/lib/data_structures/: Accumulator.h  BTNode.cpp  BTNode.h  Buffer.cpp  Buffer.h  BufferTree.cpp  BufferTree.h  CTNode.cpp  CTNode.h  CompressTree.cpp  CompressTree.h  Hashtable.h  Slaves.cpp  Slaves.h  SparseHash.cpp  SparseHash.h  SparseHashBob.cpp  SparseHashBob.h  SparseHashMurmur.cpp  SparseHashMurmur.h  UTHashtable.cpp  UTHashtable.h
src/lib/data_structures/BufferTree/: BTTest.cpp  Block.cpp  Block.h  BufferTree.cpp  BufferTree.h  Makefile.am  Node.cpp  Node.h
src/lib/data_structures/CompressTree/: CompressTree.cpp  CompressTree.h  Makefile.am  Node.cpp  Node.h
src/lib/data_structures/compression/: CTTest.cpp  CompressTree.cpp  CompressTree.h  Makefile.am  Node.cpp  Node.h  README
src/lib/example/: Makefile.am  gen_mapper.cpp  gen_mapper.h  gen_pao.cpp  gen_pao.h  wordcount.cpp  wordcountmapper.cpp  wordcountmapper.h  wordcountpao.cpp  wordcountpao.h
src/lib/filters/: AccumulatorFilter.cpp  AccumulatorFilter.h  Adder.cpp  Adder.h  BufferTreeFilter.cpp  BufferTreeFilter.h  CompressTreeFilter.cpp  CompressTreeFilter.h  ConcurrentHashFilter.cpp  ConcurrentHashFilter.h  DFSReader.cpp  DFSReader.h  Deserializer.cpp  Deserializer.h  ExternalHasher.cpp  ExternalHasher.h  FawnHasher.cpp  FawnHasher.h  FileChunkerFilter.cpp  FileChunkerFilter.h  FileReader.cpp  FileReader.h  FileReaderFilter.cpp  FileReaderFilter.h  FileTokenizer.cpp  FileTokenizer.h  FileTokenizerFilter.cpp  FileTokenizerFilter.h  Hasher.cpp  Hasher.h  LevelDBHasher.cpp  LevelDBHasher.h  LocalReader.cpp  LocalReader.h  MemCache.cpp  MemCache.h  Merger.cpp  Merger.h  PAOCreator.cpp  PAOCreator.h  (+17 more)
src/lib/io/: io_common.h~
src/lib/obsolete/: BTNode.h  BufferTree.h  BufferTreeFilter.cpp  BufferTreeFilter.h  CTTest.cpp  ExternalHasher.cpp  FawnHasher.h  Makefile.am  Store.cpp  Store.h  TestRR.cpp  TestRR.h  TesterAggregator.cpp  TesterAggregator.h  UTHashtable.h  testGSH.cpp
src/lib/record_creation/: DelimitedTokenizer.cpp  DelimitedTokenizer.h  FileTokenizer.cpp  FileTokenizer.h  Tokenizer.cpp  Tokenizer.h
src/lib/resources/: ElasticObject.h
src/lib/utils/: HashUtil.h  compsort.h  rle.h
src/master/: Communicator.cpp  Communicator.h  DFS.cpp  DFS.h  Driver.cpp  HDFS.cpp  HDFS.h  KDFS.cpp  KDFS.h  KFS.cpp  KFS.h  Makefile  Makefile.advanced  Makefile.am  Master.cpp  Master.h  NOTES  Node.cpp  Node.h  TODO  WorkDaemonClient.cpp  common.h  hdfsConnector.cpp  master.thrift  run_hdfs.sh  tbbTest.cpp
src/master/example/: Driver.cpp  generate_sample_text.sh  nodes.conf  serialize.cpp
src/master/gen-cpp/: Master.cpp  Master.h  Master_Server.cpp  Master_server.skeleton.cpp  master_constants.cpp  master_constants.h  master_types.cpp  master_types.h
src/worker/gen-cpp/: .gitignore  Makefile  Makefile.am  WorkDaemon.cpp  WorkDaemon.h  WorkDaemon_client.cpp  WorkDaemon_common.h  WorkDaemon_file.cpp  WorkDaemon_file.h  WorkDaemon_server.cpp  WorkDaemon_server.skeleton.cpp  WorkDaemon_tasks.cpp  WorkDaemon_tasks.h  WorkDaemon_test.cpp  daemon_constants.cpp  daemon_constants.h  daemon_types.h
(+9 files in other folders)
